# Learning_data_science

./: Introduction_à_la_data_science.ipynb  README.md  pyproject.toml
Learning_data_science/: Manipulez_des_tableaux_avec_NumPy.ipynb
Learning_data_science/Construisez_des_data_visualisations_avec_Matplotlib_et_Seaborn/: Générez_des_graphiques_complexes_avec_Seaborn.ipynb  Maîtrisez_les_bonnes_pratiques_de_la_data_visualisation.ipynb  Personnalisez_vos_graphiques_avec_Matplotlib.ipynb  Tracez_des_graphiques_avec_Matplotlib.ipynb
Learning_data_science/Courses/Partie1/: index.ipynb
Learning_data_science/Courses/Partie2/: 1_Créez_votre_premier_data_frame_avec_Pandas.ipynb  2_Manipulez_le_data_frame.ipynb  3_Filtrez_les_données_du_data_frame.ipynb  4_Agrégez_des_données_avec_Pandas.ipynb  5_Fusionnez_des_données_avec_Pandas.ipynb  Agrégez_des_données_avec_Pandas.ipynb  Filtrez_les_données_du_data_frame.ipynb
Learning_data_science/Créez_des_data_frames_avec_Pandas/: Agrégez_des_données_avec_Pandas.ipynb  Créez_votre_premier_data_frame_avec_Pandas.ipynb  Filtrez_les_données_du_data_frame.ipynb  Fusionnez_des_données_avec_Pandas.ipynb  Manipulez_le_data_frame.ipynb  index.ipynb
Learning_data_science/Créez_des_data_frames_avec_Pandas /: index.ipynb
Learning_data_science/Découvrer_les_librairies_python_pour_la_data_science/: README.md
Learning_data_science/Initier_vous_au_machine_learning/: README.md
Learning_data_science/data/: clients.json
learning_data_science/: index.ipynb
learning_data_science/Créez_des_data_frames_avec_Pandas/: index.ipynb
(+27 files in other folders)
